[package]
name = "wasm-mpi-rs"
version = "0.1.0"
authors = ["Nils Krüger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["openmpi"]
mvapich = []
openmpi = []

[dependencies]
actix-web = "3.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
futures = "0.3"
libc = "0.2"
log = "0.4"
log4rs = "1.0"
mpi-sys = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_with = "1.9"
serde_yaml = "0.8"
structopt = "0.3"
sys-info = "0.9"
uuid = { version = "0.8", features = ["v4", "serde"] }
wasmer = { version = "2.0", default-features = false, features = ["wat", "default-llvm", "default-universal"] }
wasmer-cache = "2.0"
wasmer-compiler-llvm = "2.0"
wasmer-engine-dylib = "2.0"
wasmer-wasi = "2.0"
